Updated JavaMailApi.docx and config.properties

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 #test config.properties
 host=imap.gmail.com
 username=kskalvar@gmail.com
-password=<password>
-debug=yes
+password=password
+debug=no
